--- a/static/styles/product_detail.css
+++ b/static/styles/product_detail.css
@@ -64,7 +64,7 @@
 }
 .stars {
   position: relative;
-  margin-right: 0.8rem;
+  margin-right: 1rem;
 }
 .stars-background {
   width: 118px;
@@ -72,6 +72,7 @@
 }
 .stars-background .bi-star-fill {
   color: #f0f0f0;
+  font-size: 20px;
 }
 .stars-color {
   position: absolute;
@@ -81,6 +82,9 @@
   overflow:hidden; 
   white-space:nowrap;
   color: rgb(255, 184, 0);
+}
+.stars-color .bi-star-fill {
+  font-size: 20px;
 }
 .pdt-review-cnt-wrap {
   font-size: 1rem;
@@ -176,4 +180,66 @@
   .total-purchase-price-wrap {
     margin: 2rem 0;
   }
+}
+
+/* 탭 */
+.pdt-4tab {
+  display: flex;
+  justify-content: space-around;
+  position: sticky;
+  top: 0;
+  margin-top: 5rem;
+  margin-bottom: 2rem;
+  width: 100%;  
+  border-bottom: 1px solid var(--line);
+  background-color: rgba(255, 255, 255, 0.8);
+}
+.pdt-4tab > .tab {
+  display: inline-block;
+  padding: 1rem 0;
+  width: 100%;
+  text-align: center;
+}
+.pdt-4tab > .tab.active {
+  border-bottom: 2px solid var(--main);
+  color: var(--main);
+  font-weight: 700;
+}
+.pdt-4tab > .tab > a {
+  display: inline-block;
+  width: 100%;
+}
+.small-count {
+  color: var(--line);
+}
+
+/* small 장바구니/바로구매 버튼 */
+.basket-buy-btn-wrap.small {
+  position: sticky;
+  top:5rem;
+}
+
+/* 상품정보/리뷰/문의/추천 탭 - 공통 */
+#pdt-info, #pdt-qna, #pdt-review, #pdt-recommend {
+  margin-top: -50px;
+  margin-bottom: 2rem;
+  padding-top: 50px;
+}
+#pdt-info h3, #pdt-qna h3, #pdt-review h3, #pdt-recommend h3 {
+  margin-bottom: 0.5rem;
+  font-weight: 700;
+  font-size: 1.3rem;
+}
+
+/* 리뷰 탭 */
+.review-grade-wrap {
+  display: flex;
+  justify-content: space-around;
+  padding: 1rem;
+  background-color: #95959505;
+  border-radius: 1rem;
+}
+.avg-grade {
+  font-weight: 900;
+  font-size: 1.5rem;
 }
