--- a/static/styles/product_index.css
+++ b/static/styles/product_index.css
@@ -56,8 +56,18 @@
   padding: 1rem;
   height: 100%;
 }
-.page-item img {
+.pdt-item-img-wrap {
+  display: inline-block;
   width: 100%;
+  height: 226px;
+  overflow: hidden;
+}
+.page-item-img {
+  width: 100%;
+}
+.pdt-item-img:hover {
+  transform: scale(1.1) ;
+  transition: all 0.7s;
 }
 .pdt-item-name {
   display: block;
