검색 기능 구현

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,8 @@
   <link rel="stylesheet" href="{% static 'styles/wishlist.css' %}?after" />
   <link rel="stylesheet" href="{% static 'styles/accounts_review_list.css' %}" />
   <link rel="stylesheet" href="{% static 'styles/review_modal.css' %}">
+  <link rel="stylesheet" href="{% static 'styles/search.css' %}" >
+  <link rel="stylesheet" href="{% static 'styles/search_fail.css' %}" >
   <title>TBT</title>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script defer src="{% static 'script/script.js' %}"></script>
@@ -30,8 +32,8 @@
     <div class="container">
       <nav class="navi">
         <div class="search-area">
-          <form action="" id="search-form">
-            <input type="text" placeholder="찾으시는 상품이 있나요?">
+          <form action="{% url 'products:search' %}" id="search-form">
+            <input type="search" name="search" placeholder="찾으시는 상품이 있나요?">
             <button type="submit">
               <i class="bi bi-search"></i>
             </button>
