--- a/static/styles/review_modal.css
+++ b/static/styles/review_modal.css
@@ -52,10 +52,83 @@
 	overflow: hidden;
 }
 
+#pdt-review .pdt-rev-titarea,
+#pdt-qna .pdt-qna-titarea {
+	display: flex;
+	justify-content: space-between;
+}
+
+#review-area .rev-sec {
+	border-top: 2px solid var(--gr);
+	display: flex;
+	padding: 1rem;
+}
+#review-area .rev-sec .rev-prof-img {
+	border-radius: 50%;
+	height: 100%;
+	min-width: 50px;
+	overflow: hidden;
+	margin-right: 2rem;
+}
+#review-area .rev-sec .rev-prof-img img {
+	width: 100%;
+}
+#review-area .rev-sec .rev-main .rev-header {
+	position: relative;
+}
+#review-area .rev-sec .rev-main .rev-header p {
+	margin-bottom: 1rem;
+}
+#review-area .rev-sec .rev-main .rev-header .rev-btn {
+	position: absolute;
+	top: 0;
+	right: 0;
+	display: flex;
+	align-items: center;
+}
+#review-area .rev-sec .rev-main .rev-header .rev-btn a:first-child {
+	margin: 0.2rem 0.5rem 0 0;
+}
+#review-area .rev-sec .rev-main .rev-header .rev-rate .bi-star-fill {
+	color: var(--rate);
+}
+#review-area .rev-sec .rev-main .rev-header .rev-rate .bi-star {
+	color: var(--gr);
+}
+#review-area .rev-sec .rev-main .rev-body p {
+	margin-bottom: 1.5rem;
+}
+
+#qna-area .qna-sec {
+	padding: 1rem 0;
+	border-bottom: 2px solid var(--gr);
+}
+#qna-area .qna-sec .qna-header {
+	font-size: 0.95rem;
+	margin-bottom: 2rem;
+}
+#qna-area .qna-sec .qna-header .qna-info .qna-status {
+	color: var(--main);
+	font-weight: 700;
+}
+#qna-area .qna-sec .qna-header .qna-user {
+	margin-top: 1rem;
+	color: var(--line);
+}
+#qna-area .qna-sec .qna-main .qna-cont {
+	display: flex;
+	margin-bottom: 1.5rem;
+}
+#qna-area .qna-sec .qna-main .qna-cont span {
+	margin-right: 1rem;
+	color: var(--main);
+	font-weight: 700;
+}
+
 #product-detail #rev-modal-btn,
 #product-detail .qna-modal-btn {
 	font-weight: 700;
-	font-size: 1.5rem;
+	font-size: 1.2rem;
 	color: var(--main);
 	cursor: pointer;
 }
@@ -89,7 +162,7 @@
 #review .item-area,
 #qna .item-area {
 	display: flex;
-	align-items: center;
+	align-items: flex-end;
 }
 #review .item-area .img-area,
 #qna .item-area .img-area {
