--- a/templates/base.html
+++ b/templates/base.html
@@ -12,15 +12,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   {% bootstrap_css %}
   <link rel="stylesheet" href="{% static 'styles/init.css' %}">
-  <link rel="stylesheet" href="{% static 'styles/main.css' %}">
+  <link rel="stylesheet" href="{% static 'styles/main.css' %}?after">
   <link rel="stylesheet" href="{% static 'styles/main_index.css' %}">
   <link rel="stylesheet" href="{% static 'styles/accounts_form.css' %}">
   <link rel="stylesheet" href="{% static 'styles/accounts_detail.css' %}" />
-  <link rel="stylesheet" href="{% static 'styles/wishlist.css' %}?after" />
+  <link rel="stylesheet" href="{% static 'styles/wishlist.css' %}" />
   <link rel="stylesheet" href="{% static 'styles/accounts_review_list.css' %}" />
   {% block css %} {% endblock css %}
   <link rel="stylesheet" href="{% static 'styles/review_modal.css' %}">
-  <link rel="stylesheet" href="{% static 'styles/search.css' %}" >
   <link rel="stylesheet" href="{% static 'styles/search_fail.css' %}" >
   <title>TBT</title>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
